--- a/JFVideoPlayView/Assets/JFVideoPlayView.xib
+++ b/JFVideoPlayView/Assets/JFVideoPlayView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -207,7 +207,7 @@
                     </constraints>
                 </progressView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ff3-Ad-XtP" userLabel="share bar">
-                    <rect key="frame" x="0.0" y="20" width="603" height="54"/>
+                    <rect key="frame" x="0.0" y="0.0" width="603" height="54"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2sW-Tm-uOx" userLabel="MaskImageV">
                             <rect key="frame" x="0.0" y="0.0" width="603" height="54"/>
@@ -256,7 +256,7 @@
                 <constraint firstAttribute="trailing" secondItem="ff3-Ad-XtP" secondAttribute="trailing" id="E2E-kG-bYW"/>
                 <constraint firstItem="Bi1-Y9-3lg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="KO5-lc-6EI"/>
                 <constraint firstItem="Bi1-Y9-3lg" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="MyZ-Bn-CdY"/>
-                <constraint firstItem="ff3-Ad-XtP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="Oag-cq-Uug"/>
+                <constraint firstItem="ff3-Ad-XtP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Oag-cq-Uug"/>
                 <constraint firstItem="bZt-Q6-00r" firstAttribute="centerY" secondItem="Bi1-Y9-3lg" secondAttribute="centerY" id="QBO-Km-pGu"/>
                 <constraint firstAttribute="trailing" secondItem="Bi1-Y9-3lg" secondAttribute="trailing" id="SJ0-Jm-skc"/>
                 <constraint firstAttribute="bottom" secondItem="KhW-y5-XVQ" secondAttribute="bottom" id="ZRW-dN-Abf"/>
